# womens-history-of-berlin--api

./: .gitignore  README.md  TODO.md
berliner_frauen/: Procfile  conftest.py  pyproject.toml  pytest.ini  requirements.txt  runtime.txt
berliner_frauen/berliner_frauen/: manage.py  schema.yml
berliner_frauen/berliner_frauen/account/: models.py
berliner_frauen/berliner_frauen/account/migrations/: 0001_initial.py
berliner_frauen/berliner_frauen/berliner_frauen/: asgi.py  settings.py  urls.py  wsgi.py
berliner_frauen/berliner_frauen/blog/: admin.py  models.py  serializers.py  views.py
berliner_frauen/berliner_frauen/blog/migrations/: 0001_initial.py  0002_blogpost_slug.py  0003_alter_blogpost_slug.py  0004_alter_blogpost_published.py  0005_blogpost_ready_to_publish.py  0006_alter_blogpost_published.py
berliner_frauen/berliner_frauen/core/: demo_crawler.py  helpers.py
berliner_frauen/berliner_frauen/pages/: admin.py  models.py  serializers.py  views.py
berliner_frauen/berliner_frauen/pages/migrations/: 0001_initial.py
berliner_frauen/berliner_frauen/streets/: admin.py  apps.py  helpers.py  models.py  sample_crawler.py  serializers.py  urls.py  views.py
berliner_frauen/berliner_frauen/streets/migrations/: 0001_initial.py  0002_alter_latitude_longitude.py  0002_alter_street_image.py  0002_auto_20220428_1101.py  0002_auto_20220428_1509.py  0002_auto_20221113_1738.py  0002_category.py  0002_remove_district_district_image_path.py  0003_alter_street_district.py  0003_auto_20220424_1824.py  0003_auto_20220506_1740.py  0003_auto_20220830_1947.py  0003_district_district_image_path.py  0004_auto_20220507_1731.py  0004_delete_image.py  0004_person.py  0004_remove_district_district_image_path.py  0005_alter_person_options.py  0005_auto_20220507_1808.py  0005_district_image_path.py  0006_street_tags.py  (+15 more)
berliner_frauen/berliner_frauen/textpages/: admin.py  apps.py  models.py  serializers.py  views.py
berliner_frauen/district_data/mitte/: mitte_crawler.py  mitte_output.txt
berliner_frauen/districts/mitte/: mitte_output.txt
berliner_frauen/districts/neukoelln/: neukoelln_crawler.py
(+29 files in other folders)
